Changed to a new table, added visibility, small css fix on link

--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -536,7 +536,7 @@ select {
     color: var(--green);
 }
 .clear-link {
-    color: var(--primary);
+    color: var(--primary-as-text);
     text-decoration: none;
 }
 
